Put bid history into its own template

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -79,5 +79,5 @@
       <span>Auctionlet was not found</span>
     {{/unless}}
   </div>
-  {{> bidHistory auctionlet}}
+  {{> bidHistory auctionlet=auctionlet}}
 </template>
