Only show bid history if auctionlet is not expired
Removing log

Reduced address size in frontend

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -79,5 +79,7 @@
       <span>Auctionlet was not found</span>
     {{/unless}}
   </div>
-  {{> bidHistory auctionlet=auctionlet}}
+  {{#unless expired}}
+    {{> bidHistory auctionlet=auctionlet}}
+  {{/unless}}
 </template>
