--- a/frontend/imports/client/bid-history.html
+++ b/frontend/imports/client/bid-history.html
@@ -1,23 +1,23 @@
 <template name="bidHistory">
-  <div class="boxDiv">
-    <h2>Bid History #{{auctionlet.auctionletId}}</h2>
-    {{#if auctionlet.history}}
-      <table class="table">
-        <tr>
-          <th>Creator</th>
-          <th>Bid Price</th>
-          <th>Unit Price</th>
-          <th>Bid Time</th>
-        </tr>
-        {{#each auctionlet.history}}
-        <tr>
-          <td>{{last_bidder}}</td>
-          <td>{{formatBalance (fromWei buy_amount)}}</td>
-          <td>{{formatBalance (unit_price)}}</td>
-          <td>{{last_bid_time}}</td>
-        </tr>
-        {{/each}}
-      </table>
-    {{/if}}
-  </div>
+  {{#if auctionlet.history}}
+    <div class="boxDiv">
+      <h2>Bid History #{{auctionlet.auctionletId}}</h2>
+        <table class="table">
+          <tr>
+            <th>Creator</th>
+            <th>Bid Price</th>
+            <th>Unit Price</th>
+            <th>Bid Time</th>
+          </tr>
+          {{#each auctionlet.history}}
+          <tr>
+            <td><a href="{{etherscanHref}}{{last_bidder}}">(Address)</a></td>
+            <td>{{formatBalance (fromWei buy_amount)}}</td>
+            <td>{{formatBalance (unit_price)}}</td>
+            <td>{{last_bid_time}}</td>
+          </tr>
+          {{/each}}
+        </table>
+    </div>
+  {{/if}}
 </template>
