Bringing info from etherscan when is not available in local node
Moving Etherscan API Token to settings file

Fix import jquery

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -79,7 +79,7 @@
       <span>Auctionlet was not found</span>
     {{/unless}}
   </div>
-  {{#unless expired}}
+  {{#if unclaimed}}
     {{> bidHistory auctionlet=auctionlet}}
-  {{/unless}}
+  {{/if}}
 </template>
