--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -69,7 +69,7 @@
               <td>{{formatBalance (fromWei auctionlet.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
             </tr>
             <tr>
-              <td>Highest bid</td>
+              <td>Winning bid</td>
             <td>{{formatBalance (fromWei auctionlet.buy_amount)}} <span class="ETH">{{ETHToken.name}}</span></td>
             </tr>
             <tr>
