Open auctions template

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -13,6 +13,7 @@
       {{> balance}}
       {{#if isConnected}}
         {{#if contractExists}}
+          {{> auctions}}
           {{> auction}}
           {{> auctionlet}}
           {{> newauction}}
