--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -1,31 +1,33 @@
 <template name="auction">
-  <div class="boxDiv">
-    <h2>Auction #{{auction.auctionId}}</h2>
-    {{#unless auctionNotFound}}
-    <table class="table table-condensed">
-      <tr>
-        <td>Creator</td>
-        <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank">{{auction.creator}}</a></td>
-      </tr>
-      <tr>
-        <td>Selling</td>
-        <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
-      </tr>
-      <tr>
-        <td>Start bid</td>
-        <td>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">{{ETHToken.name}}</span></td>
-      </tr>
-      <tr>
-        <td>Minimum increase</td>
-        <td>{{auction.min_increase}}%</td>
-      </tr>
-      <tr>
-        <td>Duration <i>(after last bid)</i></td>
-        <td>{{auction.duration}} seconds</td>
-      </tr>
-    </table>
-    {{else}}
-  <span>Auction was not found</span>
-  {{/unless}}
- </div>
+  {{#if currentAuctionId}}
+    <div class="boxDiv">
+      <h2>Auction #{{auction.auctionId}}</h2>
+      {{#unless auctionNotFound}}
+      <table class="table table-condensed">
+        <tr>
+          <td>Creator</td>
+          <td><a href="{{etherscanHref}}{{auction.creator}}" target="_blank">{{auction.creator}}</a></td>
+        </tr>
+        <tr>
+          <td>Selling</td>
+          <td>{{formatBalance (fromWei auction.sell_amount)}} <span class="MKR">{{MKRToken.name}}</span></td>
+        </tr>
+        <tr>
+          <td>Start bid</td>
+          <td>{{formatBalance (fromWei auction.start_bid)}} <span class="ETH">{{ETHToken.name}}</span></td>
+        </tr>
+        <tr>
+          <td>Minimum increase</td>
+          <td>{{auction.min_increase}}%</td>
+        </tr>
+        <tr>
+          <td>Duration <i>(after last bid)</i></td>
+          <td>{{auction.duration}} seconds</td>
+        </tr>
+      </table>
+      {{else}}
+    <span>Auction was not found</span>
+    {{/unless}}
+  </div>
+ {{/if}}
 </template>
