changed styling, added latest block. improves #73

--- a/frontend/imports/client/headers/accountselector.html
+++ b/frontend/imports/client/headers/accountselector.html
@@ -10,10 +10,11 @@
         <span class="glyphicon glyphicon-chevron-down select-glyph" aria-hidden="true"></span>
       </span>
     </p>
-    <p>
-      Auction:
+    <p class="paragraph-market">
+      Market:
       <span class="select-change-allowance">
         <a class="link-contract-address" href={{etherscanHref}}{{contract}} target="_blank">{{contract}}</a>
+        <span class="question-circle"><a href="https://github.com/MakerDAO/weekly-mkr-auction/wiki#{{section}}" target="_blank">?</a></span>
       </span>
     </p>
   </div>
