Bids# completed, developing time left

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -20,7 +20,7 @@
             </tr>
             <tr>
               <td>Time remaining</td>
-              <td>{{countdown}}</td>
+              <td>{{countdown timeRemaining}}</td>
             </tr>
           {{/unless}}
           <tr>
