Moving bid into own files

--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -39,7 +39,7 @@
           {{/if}}
         </table>
         {{#unless expired}}
-          {{> newbid bid=bid}}
+          {{> newbid auctionlet=auctionlet}}
         {{else}}
         <div class="form-group">
           <span>Auctionlet has expired.</span>
