--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -72,9 +72,7 @@
           </div>
         </div>
       </div>
-
-
-      {{#if newAuctionMessage}}
+      {{#if newAuctionMessage and newAuctionMessageType equal "danger"}}
         <div class="messageDiv alert alert-{{newAuctionMessageType}}">
           <span id='newAuctionMessage'>{{{newAuctionMessage}}}</span>
           {{#if newAuctionUrl}}
@@ -84,6 +82,7 @@
       {{/if}}
       {{#if newAuctionProgress}}
         <div class="progress">
+          <p>{{{newAuctionMessage}}}</p>
           <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{newAuctionProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{newAuctionProgress}}%">
           </div>
         </div>
