Added styling for progress bar

--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -72,7 +72,7 @@
           </div>
         </div>
       </div>
-      {{#if newAuctionMessage and newAuctionMessageType equal "danger"}}
+      {{#if newAuctionMessageRelevant}}
         <div class="messageDiv alert alert-{{newAuctionMessageType}}">
           <span id='newAuctionMessage'>{{{newAuctionMessage}}}</span>
           {{#if newAuctionUrl}}
