--- a/frontend/imports/client/headers/network-status.html
+++ b/frontend/imports/client/headers/network-status.html
@@ -1,9 +1,9 @@
 <template name="networkStatus">
   <div class="networkstatus-section row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-4 col-xs-4">
       <img alt="Maker Token Auction" src="/maker-logo-auction.svg">
     </div>
-    <div class="col-md-4 connection">
+    <div class="col-md-4 col-sm-4 col-xs-4 connection">
       <p>
         <span class="bold">{{network}}</span>
         {{> whatisthis section="network"}}
@@ -25,7 +25,7 @@
       {{/unless}}
       </p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-4 col-xs-4 blocks">
       <p>
         <span class="bold">Latest block</span>
         {{> whatisthis section="block"}}
